Archive2/53/bbf50574bacddd/output
main.cpp:9:29: warning: multi-character character constant [-Wmultichar]
                 printf("%c",'#x87');}}
                             ^
main.cpp:14:33: warning: multi-character character constant [-Wmultichar]
                     printf("%c",'#x87');}}}
                                 ^
main.cpp:19:33: warning: multi-character character constant [-Wmultichar]
                     printf("%c",'#x87');}
                                 ^
main.cpp:42:33: warning: multi-character character constant [-Wmultichar]
                     printf("%c",'#x87');}}}
                                 ^
main.cpp:46:33: warning: multi-character character constant [-Wmultichar]
                     printf("%c",'#x87');}}
                                 ^
main.cpp: In function 'int main()':
main.cpp:7:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(a=0){
               ^
main.cpp:8:20: error: expected ';' before ':' token
             for(b=0:b<=23;b++){
                    ^
main.cpp:8:30: error: expected ';' before ')' token
             for(b=0:b<=23;b++){
                              ^
main.cpp:9:35: error: 'printf' was not declared in this scope
                 printf("%c",'#x87');}}
                                   ^
main.cpp:11:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(a=1){
               ^
main.cpp:14:39: error: 'printf' was not declared in this scope
                     printf("%c",'#x87');}}}
                                       ^
main.cpp:16:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(a=2){
               ^
main.cpp:19:39: error: 'printf' was not declared in this scope
                     printf("%c",'#x87');}
                                       ^
main.cpp:20:23: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=7){
                       ^
main.cpp:21:31: error: 'printf' was not declared in this scope
                     printf("A");}
                               ^
main.cpp:22:23: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=8){
                       ^
main.cpp:23:31: error: 'printf' was not declared in this scope
                     printf("L");}
                               ^
main.cpp:24:23: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=9){
                       ^
main.cpp:25:31: error: 'printf' was not declared in this scope
                     printf("L");}
                               ^
main.cpp:26:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:27:31: error: 'printf' was not declared in this scope
                     printf(" ");}
                               ^
main.cpp:28:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:29:31: error: 'printf' was not declared in this scope
                     printf("R");}
                               ^
main.cpp:30:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:31:31: error: 'printf' was not declared in this scope
                     printf("E");}
                               ^
main.cpp:32:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:33:31: error: 'printf' was not declared in this scope
                     printf("S");}
                               ^
main.cpp:34:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:35:31: error: 'printf' was not declared in this scope
                     printf("E");}
                               ^
main.cpp:36:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
                 if(b=10){
                        ^
main.cpp:37:31: error: 'printf' was not declared in this scope
                     printf("T");}}}
                               ^
main.cpp:39:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(a=3){
               ^
main.cpp:42:39: error: 'printf' was not declared in this scope
                     printf("%c",'#x87');}}}
                                       ^
main.cpp:44:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(a=4){
               ^
main.cpp:46:39: error: 'printf' was not declared in this scope
                     printf("%c",'#x87');}}
                                       ^
main.cpp:46:42: error: expected '}' at end of input
                     printf("%c",'#x87');}}
                                          ^
main.cpp:3:13: warning: unused variable 'c' [-Wunused-variable]
     int a,b,c,d,e,f,g;
             ^
main.cpp:3:15: warning: unused variable 'd' [-Wunused-variable]
     int a,b,c,d,e,f,g;
               ^
main.cpp:3:17: warning: unused variable 'e' [-Wunused-variable]
     int a,b,c,d,e,f,g;
                 ^
main.cpp:3:19: warning: unused variable 'f' [-Wunused-variable]
     int a,b,c,d,e,f,g;
                   ^
main.cpp:3:21: warning: unused variable 'g' [-Wunused-variable]
     int a,b,c,d,e,f,g;
                     ^
main.cpp:46:42: error: expected '}' at end of input
                     printf("%c",'#x87');}}
                                          ^
